name:           aeson-pretty
version:        0.1
license:        BSD3
license-file:   LICENSE
category:       Text, Web, JSON
copyright:      Copyright 2011 Falko Peters
author:         Falko Peters <falko.peters@gmail.com>
maintainer:     Falko Peters <falko.peters@gmail.com>
stability:      experimental
tested-with:    GHC == 6.12.3
cabal-version:  >= 1.8
homepage:       http://github.com/informatikr/aeson-pretty
bug-reports:    http://github.com/informatikr/aeson-pretty/issues
build-type:     Simple
synopsis:       JSON pretty-printing library and command-line tool.
description:
    A JSON pretty-printing library compatible with aeson as well as
    a command-line tool to improve readabilty of streams of JSON data.
    .
    The library provides a single function "encodePretty". It is a drop-in
    replacement for aeson's "encode" function, producing JSON-ByteStrings for 
    human readers.
    .
    The command-line tool reads JSON from stdin and writes prettified JSON
    to stdout. It also offers a complementary "compact"-mode, essentially the
    opposite of pretty-printing.

extra-source-files:
    README.markdown

executable aeson-pretty
    main-is: Main.hs

    build-depends:
        aeson == 0.3.2.*,
        attoparsec >= 0.8.6.1,
        base == 4.*,
        blaze-builder >= 0.2.1.4,
        bytestring == 0.9.*,
        cmdargs == 0.7.*,
        containers,
        vector >= 0.7,
        text

    ghc-options: -Wall
    ghc-prof-options: -auto-all
    
library
    exposed-modules:
        Data.Aeson.Encode.Pretty

    other-modules:

    build-depends:
        aeson == 0.3.2.*,
        attoparsec >= 0.8.6.1,
        base == 4.*,
        blaze-builder >= 0.2.1.4,
        bytestring == 0.9.*,
        containers,
        vector >= 0.7,
        text

    ghc-options: -Wall

source-repository head
    type:     git
    location: http://github.com/informatikr/aeson-pretty
