name:           aeson-pretty
version:        0.4.0
license:        BSD3
license-file:   LICENSE
category:       Text, Web, JSON, Pretty Printer
copyright:      Copyright 2011 Falko Peters
author:         Falko Peters <falko.peters@gmail.com>
maintainer:     Falko Peters <falko.peters@gmail.com>
stability:      experimental
tested-with:    GHC == 6.12.3
cabal-version:  >= 1.8
homepage:       http://github.com/informatikr/aeson-pretty
bug-reports:    http://github.com/informatikr/aeson-pretty/issues
build-type:     Simple
synopsis:       JSON pretty-printing library and command-line tool.
description:
    A JSON pretty-printing library compatible with aeson as well as
    a command-line tool to improve readabilty of streams of JSON data.
    .
    The /library/ provides a single function "encodePretty". It is a drop-in
    replacement for aeson's "encode" function, producing JSON-ByteStrings for
    human readers.
    .
    The /command-line tool/ reads JSON from stdin and writes prettified JSON
    to stdout. It also offers a complementary "compact"-mode, essentially the
    opposite of pretty-printing. If you specify @-flib-only@ like this
    .
        > cabal install -flib-only aeson-pretty
    .
    the command-line tool will NOT be installed.

extra-source-files:
    README.markdown

flag lib-only
    description: Only build/install the library, NOT the command-line tool.
    default: False

executable aeson-pretty
    main-is: Main.hs

    if flag(lib-only)
        buildable: False
    else
        build-depends:
            aeson == 0.4.0.*,
            attoparsec == 0.10.*,
            base == 4.*,
            blaze-builder == 0.3.*,
            bytestring == 0.9.*,
            cmdargs == 0.7.*,
            containers,
            vector == 0.9,
            text == 0.11.*,
            unordered-containers >= 0.1.3.0

    ghc-options: -Wall
    ghc-prof-options: -auto-all
    
library
    exposed-modules:
        Data.Aeson.Encode.Pretty

    build-depends:
        aeson == 0.4.0.*,
        attoparsec == 0.10.*,
        base == 4.*,
        blaze-builder == 0.3.*,
        bytestring == 0.9.*,
        containers,
        vector == 0.9,
        text == 0.11.*,
        unordered-containers >= 0.1.3.0

    ghc-options: -Wall

source-repository head
    type:     git
    location: http://github.com/informatikr/aeson-pretty
